tree-sitter/test/corpus/comments.txt
==================
Line comment alone
==================

# plain comment

---

(module
  (line_comment))

==================
Doc line alone
==================

% inline doc

---

(module
  (doc_line))

==================
Mixed comments and statement
==================

# before
x
# after

---

(module
  (line_comment)
  (identifier)
  (line_comment))

==================
Trailing line comment after statement
==================

x # trailing

---

(module
  (identifier)
  (line_comment))

==================
Trailing doc line after statement
==================

x % trailing doc

---

(module
  (identifier)
  (doc_line))

==================
Semicolon terminates line comment
==================

# a; b

---

(module
  (line_comment)
  (identifier))

==================
Semicolon terminates doc line
==================

% a; b

---

(module
  (doc_line)
  (identifier))

==================
Inline triple-hash after statement is not a block fence
==================

x = 1 ###
y = 2

---

(module
  (binding
    (identifier)
    (integer))
  (line_comment)
  (binding
    (identifier)
    (integer)))

==================
Column-0 triple-hash still opens a block fence
==================

###
this is a block
###

---

(module
  (block_comment))

==================
Doc line with md tag
==================

%md tagged doc
x = 1

---

(module
  (doc_line)
  (binding
    (identifier)
    (integer)))

==================
Doc line with typ tag and no content
==================

%typ
x = 1

---

(module
  (doc_line)
  (binding
    (identifier)
    (integer)))

==================
Illegal doc line: unrecognized markup tag
==================

%bogus text
x = 1

---

(module
  (ERROR
    (UNEXPECTED '%')
    (identifier))
  (identifier)
  (binding
    (identifier)
    (integer)))

==================
Illegal doc line: recognized tag with a suffix
==================

%mdx text
x = 1

---

(module
  (ERROR
    (UNEXPECTED '%')
    (identifier))
  (identifier)
  (binding
    (identifier)
    (integer)))

==================
Indented triple-hash opens a block fence
==================

  ###
  inner
  ###

---

(module
  (block_comment))
