tree-sitter/test/corpus/expressions.txt
=================
Unary minus
=================

-x

---

(module
  (unary_expression
    (identifier)))

=================
Precedence plus before exponent
=================

a + b ^ c

---

(module
  (binary_expression
    (identifier)
    (exponential_expression
      (identifier)
      (identifier))))

=================
Multiplicative before additive
=================

a + b * c

---

(module
  (binary_expression
    (identifier)
    (binary_expression
      (identifier)
      (identifier))))

=================
Chained comparison stays flat
=================

a < b <= c

---

(module
  (comparison_expression
    (identifier)
    (comparison_operator)
    (identifier)
    (comparison_operator)
    (identifier)))

=================
Logical and
=================

a && b

---

(module
  (logical_expression
    (identifier)
    (identifier)))

=================
Broadcast add
=================

a .+ b

---

(module
  (binary_expression
    (identifier)
    (identifier)))

=================
Membership in
=================

x in reals

---

(module
  (comparison_expression
    (identifier)
    (comparison_operator)
    (identifier)))

=================
Exponent right associative
=================

a ^ b ^ c

---

(module
  (exponential_expression
    (identifier)
    (exponential_expression
      (identifier)
      (identifier))))

=================
Lambda single arg
=================

x -> x

---

(module
  (lambda
    (identifier)
    (identifier)))

=================
Lambda multi arg
=================

(a, b) -> a + b

---

(module
  (lambda
    (identifier)
    (identifier)
    (binary_expression
      (identifier)
      (identifier))))

=================
Lambda body extends right
=================

a -> b + c

---

(module
  (lambda
    (identifier)
    (binary_expression
      (identifier)
      (identifier))))

=================
Parenthesised expression
=================

(a + b)

---

(module
  (parenthesized_expression
    (binary_expression
      (identifier)
      (identifier))))

=================
Trailing-dot float divided
=================

1./x

---

(module
  (binary_expression
    (float)
    (identifier)))

=================
Illegal lambda: single arg in parens
=================

(single_parenthesized_argument_is_still_an_illegal_lambda) -> b

---

(module
  (parenthesized_expression
    (identifier))
  (ERROR
    (identifier)))

=================
Illegal lambda: single param with trailing comma
=================

(a,) -> b

---

(module
  (lambda
    (identifier)
    (MISSING identifier)
    (identifier)))

=====================
Axis list outside a legal position still parses
=====================

x = [.i]

---

(module
  (binding
    (identifier)
    (axis_list (axis_name (axis_id)))))
