tree-sitter/test/corpus/statements.txt
====================
Simple binding
====================

x = 42

---

(module (binding (identifier) (integer)))

====================
Tilde binding
====================

x ~ Normal(0, 1)

---

(module
  (tilde_binding
    (identifier)
    (call_expression
      (identifier)
      (argument_list (integer) (integer)))))

====================
Decomposition
====================

a, b, c = expr

---

(module
  (decomposition
    (identifier) (identifier) (identifier) (identifier)))

====================
Tilde decomposition
====================

a, b ~ MvNormal(mu, cov)

---

(module
  (tilde_decomposition
    (identifier) (identifier)
    (call_expression
      (identifier)
      (argument_list (identifier) (identifier)))))

====================
Aggregate binding
====================

C[.i, .k] := expr

---

(module
  (aggregate_binding
    (identifier)
    (axis_list
      (axis_name (axis_id))
      (axis_name (axis_id)))
    (identifier)))

====================
Aggregate binding empty axis (full reduction)
====================

x[] := y

---

(module
  (aggregate_binding
    (identifier)
    (axis_list)
    (identifier)))

====================
Decomposition with hole
====================

value, _ = rand(rstate, m)

---

(module
  (decomposition
    (identifier) (identifier)
    (call_expression
      (identifier)
      (argument_list (identifier) (identifier)))))

====================
Two statements newline
====================

x = 1
y = 2

---

(module
  (binding (identifier) (integer))
  (binding (identifier) (integer)))

====================
Two statements semicolon
====================

x = 1; y = 2

---

(module
  (binding (identifier) (integer))
  (binding (identifier) (integer)))

====================
Aggregate binding with axis-name index args in body
====================

C[.i, .k] := A[.i, .k]

---

(module
  (aggregate_binding
    (identifier)
    (axis_list
      (axis_name (axis_id))
      (axis_name (axis_id)))
    (index_expression
      (identifier)
      (axis_name (axis_id))
      (axis_name (axis_id)))))

====================
Metricsum binding
====================

g: C[.i, .k] := A[.i] * B[.k]

---

(module
  (metricsum_binding
    (identifier)
    (identifier)
    (axis_list
      (axis_name (axis_id))
      (axis_name (axis_id)))
    (binary_expression
      (index_expression (identifier) (axis_name (axis_id)))
      (index_expression (identifier) (axis_name (axis_id))))))

====================
Metricsum binding with variance markers
====================

g: C[.mu^, .nu_] := x

---

(module
  (metricsum_binding
    (identifier)
    (identifier)
    (axis_list
      (axis_name (axis_id) (variance_marker))
      (axis_name (axis_id) (variance_marker)))
    (identifier)))

====================
Function definition (multi-argument)
====================

f(x, y) = x^2 * y^2

---

(module
  (function_definition
    (identifier)
    (identifier)
    (identifier)
    (binary_expression
      (exponential_expression
        (identifier)
        (integer))
      (exponential_expression
        (identifier)
        (integer)))))

====================
Function definition (single argument)
====================

g(x) = x + 1

---

(module
  (function_definition
    (identifier)
    (identifier)
    (binary_expression
      (identifier)
      (integer))))

====================
Function definition (record body, multi-output)
====================

g(x, y, z) = record(p = x + y, q = y * z)

---

(module
  (function_definition
    (identifier)
    (identifier)
    (identifier)
    (identifier)
    (call_expression
      (identifier)
      (argument_list
        (keyword_argument
          (identifier)
          (binary_expression (identifier) (identifier)))
        (keyword_argument
          (identifier)
          (binary_expression (identifier) (identifier)))))))

====================
Function-call statement is not a function definition
====================

c = f(a, b)
k(x = a)

---

(module
  (binding
    (identifier)
    (call_expression
      (identifier)
      (argument_list (identifier) (identifier))))
  (call_expression
    (identifier)
    (argument_list
      (keyword_argument (identifier) (identifier)))))

====================
Aggregate binding single axis
====================

x[.i] := y

---

(module
  (aggregate_binding
    (identifier)
    (axis_list (axis_name (axis_id)))
    (identifier)))
